# cat-mouse

./: .gitignore  Cargo.toml  LICENSE  README.md  sdkconfig.defaults
.cargo/: config.toml
differential-drive/: Cargo.toml
differential-drive-example/: Cargo.toml
differential-drive-example/src/: main.rs
differential-drive/src/: lib.rs
encoder/: Cargo.toml
encoder-example/: Cargo.toml
encoder-example/src/: main.rs
encoder/src/: lib.rs
hardware/freecad/: BoardOutline.FCStd  CatMouse-BoardPlatform.stl  CatMouse-Lidar.stl  CatMouse-N20BracketV.stl  CatMouse-Platform.stl  CatMouse.FCStd  LIDAR-Back.stl  LIDAR-Front.stl  LIDAR-SlipRingTube.stl  LIDAR-TOFMount.stl  LIDAR.FCStd
hardware/fusion360/: BoardMount.stl  N20Mount.stl  Platform.stl  Rover-v23.f3z  cat-mouse.3mf
hardware/kicad/: CatMouse.kicad_pcb  CatMouse.kicad_prl  CatMouse.kicad_pro  CatMouse.kicad_sch  fp-info-cache  fp-lib-table  sym-lib-table
hardware/kicad/libs/: CatMouse.kicad_sym
hardware/kicad/libs/CatMouse.3d/: B6B-ZR.STEP  SOT25_DIO.step
hardware/kicad/libs/CatMouse.pretty/: BarrelJack_CUI_PJ-202A_Horizontal.kicad_mod  DRV8835_pololu.kicad_mod  DRV8838_pololu.kicad_mod  ESP32-S3-WROOM-1.kicad_mod  ESP32-WROOM-32.kicad_mod  JST_ZH_B4B-ZR_1x04_P1.50mm_Vertical.kicad_mod  JST_ZH_B6B-ZR_1x06_P1.50mm_Vertical.kicad_mod  SOT-25.kicad_mod  SW_PUSH_6mm.kicad_mod  TP6612FNG_MOD.kicad_mod
lidar/: Cargo.toml
lidar-example/: Cargo.toml
lidar-example/src/: main.rs
lidar/src/: lib.rs
luna/: Cargo.toml
luna-example/: Cargo.toml
luna-example/src/: main.rs
luna/src/: lib.rs
motor/: Cargo.toml
motor-example/: Cargo.toml
motor-example/src/: main.rs
motor/src/: lib.rs
position-control/: Cargo.toml
position-control-example/: Cargo.toml
position-control-example/src/: main.rs
position-control/src/: lib.rs
proximity/: Cargo.toml
proximity/src/: lib.rs
rover/: .gitignore  Cargo.toml  build.rs  flashfs.sh  partitions.csv
rover/src/: brain.rs  config.rs  factory.rs  http_controller.rs  logger.rs  main.rs  mqtt.rs  network.rs  peripherals.rs
rover/src/brain/: simple.rs
speed-control/: Cargo.toml
speed-control-example/: Cargo.toml
speed-control-example/src/: main.rs
speed-control/src/: lib.rs
wheel/: Cargo.toml
wheel/src/: lib.rs
