[package]
name = "encoder-example"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
embedded-hal = { workspace = true }
esp-idf-sys = { workspace = true }
esp-idf-hal = { workspace = true }
anyhow = { workspace = true }
encoder = { path = "../encoder" }

[build-dependencies]
embuild = "0.30"
anyhow = { version = "1" }
