[package]
name = "lidar-example"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
embedded-hal = { workspace = true }
esp-idf-sys = { workspace = true }
esp-idf-hal = { workspace = true }
esp-idf-svc = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
lidar = { path = "../lidar" }

[build-dependencies]
embuild = "0.30"
anyhow = { version = "1" }
