[package]
name = "lidar"
version.workspace = true
authors.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
esp-idf-hal = { workspace = true }
embedded-hal = { workspace = true }
lidar-ld19 = { workspace = true }
log = { workspace = true }
