[package]
name = "luna"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
esp-idf-sys = { workspace = true }
esp-idf-svc = { workspace = true }
esp-idf-hal = { workspace = true }
embedded-svc = { workspace = true }
embedded-hal = { workspace = true }
log = { workspace = true }
shared-bus = { workspace = true }
proximity = { path = "../proximity" }
